--- a/estilos.css
+++ b/estilos.css
@@ -46,7 +46,7 @@ nav{
     color:#28e0b1;
 }
 #cont-img{
-    background-image: url(imagenes/imagen-uno.jpg);
+    background-image: url(Imagenes/imagen-uno.jpg);
     height: 300px;
     background-position: center;
     margin-bottom: 60px;
